@@ -110,6 +110,8 @@ canvas { display: block; }
 .applications .first { padding-left: 5px !important; }
 .applications .name { color: gray; display: block; width: 250px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 .applications .ssl { background-color: #68B25B; padding: 1px 3px; border-radius: 3px; font-variant: normal; font-size: 9px; text-transform: uppercase; margin-right: 5px; color: white; vertical-align: middle; line-height: 0; }
+.applications .ssl-expire {  background-color: #F6BB42 !important; }
+.applications .ssl-expired {  background-color: #FC6E51 !important; }
 .applications .cluster { margin-left: 5px; font-size: 10px;}
 .applications .name:hover { text-decoration: none; }
 .applications .progress { float: right; width: 30px; height: 5px; background-color: #F0F0F0; margin: 5px 0 0 5px; }
