@@ -25,8 +25,10 @@
 
 	<div id="success"><span class="fa fa-check-circle"></span></div>
 	<div data-component="message" data-button="@(Close)"></div>
-	<div data-component="confirm"></div>
 	<div data-component="loading" class="ui-loading"></div>
+	<div data-component="audio"></div>
+	<div data-component="notifications"></div>
+	<div data-component="confirm"></div>
 	<div data-component="info"></div>
 
 	<header>
