@@ -1,5 +1,6 @@
 ======= 4.0.0
 
-- add renew Let's encrypt certificates
+- renew Let's encrypt certificates
+- watching SSL expirations
 - improve UI
 - update debug.js version
